Closed
Bug 345584
Opened 19 years ago
Closed 19 years ago
Build broken for nsTypeAheadFind.cpp
Categories
(SeaMonkey :: Find In Page, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: alfred.peng, Assigned: alfred.peng)
References
Details
Attachments
(1 file, 1 obsolete file)
1.34 KB,
patch
|
aaronlev
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
"nsTypeAheadFind.cpp", line 397: Error: Ambiguous "?:" expression, second operand of type "nsCOMPtr<nsISelectionController>" and third operand of type "int" can be converted to one another.
1 Error(s) detected.
gmake[1]: *** [nsTypeAheadFind.o] Error 1
Assignee | ||
Comment 1•19 years ago
|
||
Attachment #230257 -
Flags: review?(bzbarsky)
![]() |
||
Comment 2•19 years ago
|
||
*getter_AddRefs(selectionController) will always be null. Is that what we want here?
I'd think we rather want selectionController.get().
That said, I can't really review this code; I'm not a peer for the module, and don't really know the code in this file.
Assignee | ||
Comment 3•19 years ago
|
||
(In reply to comment #2)
> *getter_AddRefs(selectionController) will always be null. Is that what we want
> here?
hmm... null? From the following definition?
nsISupports*&
operator*()
{
return *(mTargetSmartPtr.StartAssignment());
}
Attachment #230257 -
Attachment is obsolete: true
Attachment #230399 -
Flags: review?(aaronleventhal)
Attachment #230257 -
Flags: review?(bzbarsky)
*** Bug 345697 has been marked as a duplicate of this bug. ***
Updated•19 years ago
|
Attachment #230399 -
Flags: review?(aaronleventhal) → review+
![]() |
||
Comment 5•19 years ago
|
||
StartAssignment() nulls out the pointer (after releasing the previous value, if any). It has to; otherwise you'd leak whatever the previous value was.
![]() |
||
Updated•19 years ago
|
Attachment #230399 -
Flags: superreview+
Comment 6•19 years ago
|
||
This is definitely the correct patch, someone with CVS access can check in.
Also I need to remember to get this checked in on branch when bug 344337 goes in on branch.
Assignee | ||
Comment 7•19 years ago
|
||
=> Please help me check in the patch. Thanks.
Whiteboard: [checkin needed]
Updated•19 years ago
|
Assignee: nobody → alfred.peng
Comment 8•19 years ago
|
||
mozilla/toolkit/components/typeaheadfind/src/nsTypeAheadFind.cpp 1.24
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Updated•17 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•