Bug 345584: fix build bustage in nsTypeAheadFind.cpp, patch by Alfred Peng <alfred.peng@sun.com>, r=aaronlev, sr=bzbarsky